<resources>
    <string name="app_name">洛书执行器</string>
    <string name="callWeWorkBtnTxt">启动企微</string>
    <string name="accessSettingBtnTxt">辅助设置</string>
    <string name="startSchedulerBtnText">启动定时任务</string>
    <string name="cancelSchedulerBtnText">退出任务执行</string>

    <!-- Text view -->
    <string name="appTitle">SMR任务执行器</string>
    <string name="AwakeWechat">进行单点测试:</string>
    <string name="taskSop">执行SOP朋友圈任务</string>
    <string name="taskGroupSend">执行1V1群发任务</string>
    <string name="taskCustomerCircle">执行客户朋友圈任务</string>
    <string name="alltask">一键循环执行\n(默认只执行当日任务)</string>
    <string name="checkService">检查辅助功能开启状态:</string>
    <string name="checkPermission">检查悬浮窗功能权限:</string>
    <string name="mainPage">主页</string>
    <string name="minePage">我的</string>
    <string name="account">账号:</string>
    <string name="password">密码:</string>
    <string name="accountNotice">请输入账号</string>
    <string name="passWordNotice">请输入密码</string>
    <string name="tips">如果点击执行任务无反应，请再次检查辅助功能，可尝试关闭再次开启</string>


    <!-- Button view -->
    <string name="wework">点击测试</string>
    <string name="Do">点击执行</string>
    <string name="taskAll">一键执行</string>
    <string name="accessibility">设置辅助</string>
    <string name="ball">设置悬浮窗</string>
    <string name="floatHandlerBtnTxt">启动</string>
    <string name="accessNotice">去开启</string>
    <string name="login">登录</string>
    <string name="weworkLogin">企微登录</string>
    <string name="loginOut">退出登录</string>
    <string name="userSetting">参数配置</string>

    <!-- task config -->
    <string name="loginServer">test</string>
    <string name="version">v1.0.1_beta</string>
    <integer name="sopDay">0</integer>
    <integer name="sopHour">0</integer>
    <integer name="sopMin">0</integer>

    <integer name="customerDay">0</integer>
    <integer name="customerHour">0</integer>
    <integer name="customerMin">0</integer>

    <integer name="groupSendDay">0</integer>
    <integer name="groupSendHour">0</integer>
    <integer name="groupSendMin">0</integer>
    <string name="groupWeekDay">星期</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="settings">功能设置</string>
    <string name="note">功能说明</string>
    <string name="startTask">启动企微开始群发</string>
    <string name="todayTask">只执行今日任务</string>
    <string name="chooseTime">选择时间执行:</string>
    <string name="windowWidth">窗口宽度:</string>
    <string name="windowHeight">窗口高度:</string>

    <string name="saveSetting">保存修改</string>

</resources>