<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="137dp"
        android:layout_height="22dp"
        android:text="@string/AwakeWechat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.116"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.178" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="157dp"
        android:layout_height="24dp"
        android:text="@string/taskGroupSend"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.082" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="179dp"
        android:layout_height="23dp"
        android:text="@string/checkService"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        app:layout_constraintVertical_bias="0.18" />

    <Button
        android:id="@+id/wework"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:onClick="btnOpenWeWorkClick"
        android:text="@string/wework"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.675"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.164"
        tools:ignore="OnClick" />

    <Button
        android:id="@+id/customerCircle"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:onClick="customerFriendCircleTask"
        android:text="@string/Do"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/groupSend"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/accessibilityService"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:onClick="showNoticeDialog"
        android:text="@string/accessibility"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/taskall"
        app:layout_constraintVertical_bias="0.116" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="150dp"
        android:layout_height="24dp"
        android:text="@string/checkPermission"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.241" />

    <Button
        android:id="@+id/suspendedBall"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:onClick="showFloatWindowNotice"
        android:text="@string/ball"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.644"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/accessibilityService"
        app:layout_constraintVertical_bias="0.128" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="194dp"
        android:layout_height="37dp"
        android:layout_marginStart="132dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="63dp"
        android:background="#ED81A6"
        android:backgroundTint="#F384A9"
        android:rotationX="0"
        android:text="@string/appTitle"
        android:textColor="#3949AB"
        android:textColorHighlight="#F35959"
        android:textColorHint="#EA6666"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.064" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="172dp"
        android:layout_height="24dp"
        android:text="@string/taskCustomerCircle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="0.114" />

    <Button
        android:id="@+id/groupSend"
        android:layout_width="120dp"
        android:layout_height="56dp"
        android:onClick="groupSendTask"
        android:text="@string/Do"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.578"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/wework"
        app:layout_constraintVertical_bias="0.029" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="174dp"
        android:layout_height="22dp"
        android:text="@string/taskSop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.136" />

    <Button
        android:id="@+id/sopFriendCircle"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:onClick="sopFriendCircleTask"
        android:text="@string/Do"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/customerCircle"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/taskall"
        android:layout_width="125dp"
        android:layout_height="55dp"
        android:onClick="allTask"
        android:text="@string/Do"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.616"
        app:layout_constraintStart_toEndOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/sopFriendCircle"
        app:layout_constraintVertical_bias="0.074" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="155dp"
        android:layout_height="25dp"
        android:text="@string/alltask"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.125"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:layout_constraintVertical_bias="0.169" />

    <Button
        android:id="@+id/button_startScheduler"
        android:layout_width="151dp"
        android:layout_height="52dp"
        android:layout_marginBottom="28dp"
        android:onClick="btnScheduleJobClick"
        android:text="@string/startSchedulerBtnText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.123"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_cancelScheduler"
        android:layout_width="143dp"
        android:layout_height="51dp"
        android:layout_marginBottom="28dp"
        android:onClick="btnCancelScheduleJobClick"
        android:text="@string/cancelSchedulerBtnText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.895"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>